syntax = "proto3";

import "google/protobuf/timestamp.proto";

package event.proto;

message EventWrapper {
  oneof event {
    Log log = 1;
    Metric metric = 2;
  }
}

message Log {
  map<string, Value> fields = 1;
}

message ValueMap {
  map<string, Value> fields = 1;
}

message ValueArray {
  repeated Value items = 1;
}

enum ValueNull {
  NULL_VALUE = 0;
}

message Value {
  reserved 3;
  oneof kind {
    bytes raw_bytes = 1;
    google.protobuf.Timestamp timestamp = 2;
    int64 integer = 4;
    double float = 5;
    bool boolean = 6;
    ValueMap map = 7;
    ValueArray array = 8;
    ValueNull null = 9;
  }
}

message Metric {
  string name = 1;
  google.protobuf.Timestamp timestamp = 2;
  map<string, string> tags = 3;
  enum Kind {
    Incremental = 0;
    Absolute = 1;
  }
  Kind kind = 4;
  oneof value {
    Counter counter = 5;
    Gauge gauge = 6;
    Set set = 7;
    Distribution distribution = 8;
    AggregatedHistogram aggregated_histogram = 9;
    AggregatedSummary aggregated_summary = 10;
  }
  string namespace = 11;
}

message Counter {
  double value = 1;
}

message Gauge {
  double value = 1;
}

message Set {
  repeated string values = 1;
}

message Distribution {
  repeated double values = 1;
  repeated uint32 sample_rates = 2;
  enum StatisticKind {
    Histogram = 0;
    Summary = 1;
  }
  StatisticKind statistic = 3;
}

message AggregatedHistogram {
  repeated double buckets = 1;
  repeated uint32 counts = 2;
  uint32 count = 3;
  double sum = 4;
}

message AggregatedSummary {
  repeated double quantiles = 1;
  repeated double values = 2;
  uint32 count = 3;
  double sum = 4;
}
